--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Starky</title>
     <link rel="stylesheet" href="starky.css">
 </head>
-<body>
+<body id="body">
 
     <header>
         <section class="nav">
